--- a/test/index.html
+++ b/test/index.html
@@ -6,17 +6,14 @@
     <script language="javascript" src="testrunner.js" type="text/javascript"></script>
     <script language="javascript" src="testnavigation.js" type="text/javascript"></script>
     <link media="screen" href="testsuite.css" type="text/css" rel="stylesheet"/>    
-
-    <script language="javascript" src="lib/sassij.js" type="text/javascript"></script>
-    <script language="javascript" src="lib/sassij/engine.js" type="text/javascript"></script>
+    <script language="javascript" src="testsetup.js" type="text/javascript"></script>
   </head>
   <body>
     <script language="javascript" type="text/javascript">
 
-  $( document ).data( 'path_to_root', '..' );
 
     </script>
-    <h1>Sassij Tests</h1>
+    <h1>Sassijs Tests</h1>
     <h2 id="banner">
       <select id='test_select'></select>
     </h2>
