--- a/test/index.html
+++ b/test/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" >
   <head>
-    <title>Sassij Engine Tests</title>    
+    <title>Sassijs Tests</title>    
     <script language="javascript" src="jquery-1.3.1.min.js" type="text/javascript"></script>
     <script language="javascript" src="testrunner.js" type="text/javascript"></script>
     <script language="javascript" src="testnavigation.js" type="text/javascript"></script>
@@ -13,10 +13,8 @@
 
 
     </script>
-    <h1>Sassijs Tests</h1>
-    <h2 id="banner">
-      <select id='test_select'></select>
-    </h2>
+    <h1></h1>
+    <h2 id="banner"></h2>
     <script language="javascript" type="text/javascript">
     </script>
     <ol id="tests"></ol>
